--- a/themes/casper/layouts/partials/li.html
+++ b/themes/casper/layouts/partials/li.html
@@ -9,9 +9,9 @@
     <footer class="post-meta">
         {{$author := index .Site.Data.authors .Params.author }}
         {{ if isset $author "thumbnail" }}
-            <img class="author-thumb" src="{{ .Site.BaseURL }}{{ $author.thumbnail }}" alt="Author image" nopin="nopin" />
+            <img class="author-thumb" src="{{ .Site.Params.staticUrl }}{{ $author.thumbnail }}" alt="Author image" nopin="nopin" />
         {{else if .Site.Params.logo }}
-            <img class="author-thumb" src="{{ .Site.BaseURL }}{{.Site.Params.logo}}" alt="Author image" nopin="nopin" />
+            <img class="author-thumb" src="{{ .Site.Params.staticUrl }}{{.Site.Params.logo}}" alt="Author image" nopin="nopin" />
         {{end}}
         {{if and (ne .Params.author .Site.Params.author) .Params.author}}
         {{$author := index .Site.Data.authors .Params.author }}
