--- a/blog/static/css/screen.css
+++ b/blog/static/css/screen.css
@@ -20,19 +20,6 @@
 
 */
 
-/*声明 WebFont*/
-@font-face {
-  font-family: 'SourceHanSans';
-  src: url('../fonts/SourceHanSans.eot');
-  src:
-    url('../fonts/SourceHanSans.eot') format('embedded-opentype'),
-    url('../fonts/SourceHanSans.woff') format('woff'),
-    url('../fonts/SourceHanSans.ttf') format('truetype'),
-    url('../fonts/SourceHanSans.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
 /* ==========================================================================
    0. Normalize.css v2.1.3 | MIT License | git.io/normalize | (minified)
    ========================================================================== */
@@ -46,7 +33,7 @@ audio, canvas, video { display: inline-block; }
 audio:not([controls]) { display: none; height: 0; }
 [hidden], template { display: none; }
 html {
-   font-family: SourceHanSans;
+   font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
 }
@@ -65,7 +52,7 @@ hr {
 }
 mark { background: #FF0; color: #000; }
 code, kbd, pre,
-samp { font-family: SourceHanSans; font-size: 1em; }
+samp { font-family: monospace, serif; font-size: 1em; }
 pre { white-space: pre-wrap; }
 q { quotes: "\201C" "\201D" "\2018" "\2019"; }
 small { font-size: 80%; }
@@ -87,7 +74,7 @@ fieldset {
 }
 legend { border: 0; padding: 0; }
 button, input, select,
-textarea { font-family: SourceHanSans; font-size: 100%; margin: 0; }
+textarea { font-family: inherit; font-size: 100%; margin: 0; }
 button, input { line-height: normal; }
 button, select { text-transform: none; }
 button, html input[type="button"],
@@ -203,7 +190,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: "SourceHanSans", serif;
+    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -230,7 +217,7 @@ h4, h5, h6 {
     color: #2E2E2E;
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
-    font-family: "SourceHanSans", sans-serif;
+    font-family: "Open Sans", sans-serif;
     text-rendering: geometricPrecision;
 }
 
@@ -356,7 +343,7 @@ mark {
 
 code, tt {
     padding: 1px 3px;
-    font-family: SourceHanSans;
+    font-family: Inconsolata, monospace, sans-serif;
     font-size: 0.85em;
     white-space: pre-wrap;
     border: #E3EDF3 1px solid;
@@ -371,7 +358,7 @@ pre {
     border: #E3EDF3 1px solid;
     width: 100%;
     padding: 10px;
-    font-family: SourceHanSans;
+    font-family: Inconsolata, monospace, sans-serif;
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
@@ -533,9 +520,10 @@ body.nav-opened .site-wrapper {
     width: 80%;
 }
 
-.main-header a {
+.main-header a.bloglogo {
     text-decoration: none;
 }
+
 .main-nav {
     position: relative;
     padding: 35px 40px;
@@ -544,7 +532,7 @@ body.nav-opened .site-wrapper {
 
 .main-nav a {
     text-decoration: none;
-    font-family: SourceHanSans;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Navigation */
@@ -573,7 +561,7 @@ body.nav-opened .nav-cover {
                         opacity 0.3s ease 0.7s;
             transition: transform 0.5s ease,
                         opacity 0.3s ease 0.7s;
-font-family: SourceHanSans;
+font-family: "Open Sans","Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 font-weight: 700;
 font-size: 11px;
 color: #909090;
@@ -723,7 +711,7 @@ body.nav-opened .nav {
     color: #111 !important;
     text-align: center;
     font-size: 12px;
-    font-family: SourceHanSans;
+    font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
     text-decoration: none;
     line-height: 35px;
@@ -887,7 +875,7 @@ body.nav-opened .menu-button .word {
     font-size: 5rem;
     letter-spacing: -1px;
     font-weight: 700;
-    font-family: SourceHanSans;
+    font-family: "Open Sans", sans-serif;
     color: #fff;
 }
 
@@ -896,7 +884,7 @@ body.nav-opened .menu-button .word {
     font-size: 2rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: SourceHanSans;
+    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
 }
@@ -987,7 +975,7 @@ body:not(.post-template) .post-title {
 .post-meta {
     display: block;
     margin: 1.75rem 0 0 0;
-    font-family: SourceHanSans;
+    font-family: "Open Sans", sans-serif;
     font-size: 1.5rem;
     line-height: 2.2rem;
     color: #9EABB3;
@@ -1311,7 +1299,7 @@ body:not(.post-template) .post-title {
 /* Location, website, and link */
 .author-profile .author-meta {
     margin: 2rem 0;
-    font-family: SourceHanSans;
+    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     font-size: 1.7rem;
 }
@@ -1361,7 +1349,7 @@ body:not(.post-template) .post-title {
     width: 80%;
     max-width: 710px;
     margin: 4rem auto;
-    font-family: SourceHanSans;
+    font-family: "Open Sans", sans-serif;
     font-size: 1.3rem;
     color: #9EABB3;
     text-align: center;
@@ -1446,7 +1434,7 @@ body:not(.post-template) .post-title {
     margin: 8rem 0 0 0;
     padding: 0.5rem 15px;
     border-top: #EBF2F6 1px solid;
-    font-family: SourceHanSans;
+    font-family: "Open Sans", sans-serif;
     font-size: 1rem;
     line-height: 1.75em;
     color: #BBC7CC;
