--- a/blog/themes/casper/layouts/partials/header.html
+++ b/blog/themes/casper/layouts/partials/header.html
@@ -30,12 +30,12 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="{{.Site.BaseURL}}images/favicon.ico">
-	  <link rel="apple-touch-icon" href="{{.Site.BaseURL}}images/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="{{.Site.Params.staticUrl}}images/favicon.ico">
+	  <link rel="apple-touch-icon" href="{{.Site.Params.staticUrl}}images/apple-touch-icon.png" />
 
-    <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/screen.css" />
-    <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/nav.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata" />
+    <link rel="stylesheet" type="text/css" href="{{.Site.Params.staticUrl}}css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="{{.Site.Params.staticUrl}}css/nav.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata" /> -->
 
 
     {{ if .Site.Params.RSSLink}}
@@ -53,16 +53,16 @@
     <link rel="canonical" href="{{ .Permalink }}" />
 
     {{with  .Site.Params.googleAnalyticsUserID }}
-    <script>
+    <!-- <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
+    
       ga('create', '{{.}}', 'auto');
       ga('send', 'pageview');
-
-    </script>
+    
+    </script> -->
     {{end}}
 
     {{ if .Site.Params.customHeaderPartial }}
