--- a/blog/themes/casper/layouts/partials/footer.html
+++ b/blog/themes/casper/layouts/partials/footer.html
@@ -5,9 +5,9 @@
         {{end}}
     </footer>
     </div>
-    <script type="text/javascript" src="{{.Site.BaseURL}}js/jquery.js"></script>
-    <script type="text/javascript" src="{{.Site.BaseURL}}js/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="{{.Site.BaseURL}}js/index.js"></script>
+    <script type="text/javascript" src="{{.Site.Params.staticUrl}}js/jquery.js"></script>
+    <script type="text/javascript" src="{{.Site.Params.staticUrl}}js/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="{{.Site.Params.staticUrl}}js/index.js"></script>
     {{ if .Site.Params.customFooterPartial }}
         {{ partial .Site.Params.customFooterPartial . }}
     {{ end }}
