--- a/blog/themes/casper/layouts/index.html
+++ b/blog/themes/casper/layouts/index.html
@@ -1,10 +1,11 @@
 {{ partial "header.html" . }}
+{{ $staticurl := .Site.Params.staticUrl }}
 
 {{if .Site.Params.cover}}
 {{if or (eq (substr .Site.Params.cover 0 7) "http://") (eq (substr .Site.Params.cover 0 8) "https://")}}
   <header class="main-header" style="background-image: url({{.Site.Params.cover}})">
   {{ else }}
-  <header class="main-header" style="background-image: url({{.Site.BaseURL}}{{.Site.Params.cover}})">
+  <header class="main-header" style="background-image: url({{ $staticurl }}{{.Site.Params.cover}})">
   {{ end }}
 {{else}}
 <header class="main-header no-cover">
@@ -12,7 +13,7 @@
 
     <nav class="main-nav overlay clearfix">
         {{ if .Site.Params.logo }}
-            <a class="blog-logo" href="{{ .Permalink }}"><img src="{{.Site.BaseURL}}{{ .Site.Params.logo }}" alt="Blog Logo" /></a>
+            <a class="blog-logo" href="{{ .Permalink }}"><img src="{{ $staticurl }}{{ .Site.Params.logo }}" alt="Blog Logo" /></a>
         {{end}}
         {{ if .Site.Menus.main }}
             <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
